--- a/observability/grafana-operator/grafana-datasource-prometheus.yaml
+++ b/observability/grafana-operator/grafana-datasource-prometheus.yaml
@@ -1,7 +1,6 @@
-# Prometheus datasource for Istio/mesh metrics.
-# Use IN-CLUSTER URLs only (no .apps. Route). Default: Thanos querier (accepts Grafana queries;
-# prometheus-user-workload:9091 often returns 400 on POST /api/ds/query). For Istio data ensure
-# that store scrapes the mesh (ServiceMonitors in nfl-wallet-* namespaces).
+# Prometheus datasource for Istio/mesh metrics (NFL Wallet east/west).
+# Default: Promxy/ACM Observability (cluster g62mw). Si 401: usar grafana-datasource-prometheus-bearer-token.yaml.
+# Otras opciones in-cluster: thanos-querier.openshift-monitoring.svc.cluster.local:9091, prometheus-user-workload...
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
@@ -15,9 +14,11 @@ spec:
     name: Prometheus
     type: prometheus
     access: proxy
-    url: "http://thanos-querier-nfl-wallet-east-nfl-wallet-prod-thanos.openshift-cluster-observability-operator.svc.cluster.local:10902"
+    url: "https://promxy-acm-observability.apps.cluster-g62mw.dynamic.redhatworkshops.io"
     isDefault: true
     uid: prometheus
     jsonData:
       timeInterval: "15s"
       httpMethod: GET
+      disableMetricsLookup: true
+      tlsSkipVerify: true
