--- a/kuadrant-system/api-key-secrets.yaml
+++ b/kuadrant-system/api-key-secrets.yaml
@@ -1,6 +1,12 @@
 # API key Secrets for Kuadrant AuthPolicy (test and prod).
-# Kuadrant requires these Secrets to be in the same namespace as the Kuadrant CR (kuadrant-system)
-# when allNamespaces is false. Apply with: kubectl apply -f kuadrant-system/api-key-secrets.yaml
+# PREFERRED: These Secrets are now created by the Helm charts. When you sync nfl-wallet-prod and
+# nfl-wallet-test (e.g. via Argo CD), the templates api-key-secrets-kuadrant.yaml in each chart
+# create these Secrets in kuadrant-system from nfl-wallet.apiKeys.* values. No manual apply needed
+# per managed cluster.
+#
+# This standalone file is for: (1) clusters where the chart is not used, or (2) one-off apply before
+# the chart was updated. Kuadrant requires Secrets in kuadrant-system when allNamespaces is false.
+# Apply with: kubectl apply -f kuadrant-system/api-key-secrets.yaml
 # Replace values with Sealed Secrets or override in prod. Label authorino.kuadrant.io/managed-by
 # must match your Authorino instance name (often "authorino"; if Kuadrant uses "kuadrant", change below).
 ---
