--- a/docs/argocd-cluster-secrets-manual.yaml
+++ b/docs/argocd-cluster-secrets-manual.yaml
@@ -18,12 +18,20 @@
 #   argocd cluster add <context-from-kubeconfig> --name east --server https://api....
 #   That will create the secret for you; or copy the bearerToken from the generated secret.
 #
-# Update existing secret (east or west) with new token — replace SECRET_NAME and TOKEN:
-#   SECRET_NAME=cluster-east   # or cluster-west
-#   kubectl patch secret -n openshift-gitops $SECRET_NAME --type='json' -p='[{"op":"replace","path":"/data/config","value":"'$(echo -n '{"tlsClientConfig":{"insecure":true},"bearerToken":"TOKEN"}' | base64 -w0)'"}]}'
-#   Or edit: kubectl edit secret cluster-east -n openshift-gitops (then base64-encode the new config).
-#   After updating, restart the application controller to reload credentials:
-#   kubectl rollout restart statefulset/openshift-gitops-application-controller -n openshift-gitops
+# Update existing secret (east or west) with new token:
+#   1) Get token on MANAGED cluster (east or west) — create a long-lived token for the Argo CD SA:
+#      oc login https://api.<east-domain>:6443
+#      oc create namespace openshift-gitops --dry-run=client -o yaml | oc apply -f -
+#      oc create serviceaccount openshift-gitops-argocd-application-controller -n openshift-gitops --dry-run=client -o yaml | oc apply -f -
+#      oc create token openshift-gitops-argocd-application-controller -n openshift-gitops --duration=87600h
+#      (87600h = 10 years; copy the printed token. If the API rejects, try 8760h for 1 year.)
+#      echo $TOKEN   # use this in step 2
+#   2) On the HUB, patch the secret (replace TOKEN with the value from step 1):
+#      kubectl patch secret cluster-east -n openshift-gitops --type='json' -p='[{"op":"replace","path":"/data/config","value":"'$(echo -n '{"tlsClientConfig":{"insecure":true},"bearerToken":"TOKEN"}' | base64 -w0)'"}]}'
+#      (Use cluster-west and west token for west.)
+#   3) Restart the application controller:
+#      kubectl rollout restart statefulset/openshift-gitops-application-controller -n openshift-gitops
+#   Or edit manually: kubectl edit secret cluster-east -n openshift-gitops — set data.config to base64 of {"tlsClientConfig":{"insecure":true},"bearerToken":"<token>"}
 # ---------------------------------------------------------------------------
 apiVersion: v1
 kind: Secret
