--- a/app-nfl-wallet-acm.yaml
+++ b/app-nfl-wallet-acm.yaml
@@ -347,6 +347,10 @@ spec:
           jsonPointers:
             - /metadata/resourceVersion
         - group: gateway.networking.k8s.io
+          kind: Gateway
+          jqPathExpressions:
+            - .status
+        - group: gateway.networking.k8s.io
           kind: HTTPRoute
           jqPathExpressions:
             - .status
