--- a/docs/argocd-cluster-secrets-manual.yaml
+++ b/docs/argocd-cluster-secrets-manual.yaml
@@ -56,6 +56,6 @@ metadata:
 type: Opaque
 stringData:
   name: west
-  server: https://api.cluster-9nvg4.dynamic.redhatworkshops.io:6443
+  server: https://api.cluster-2l9nd.dynamic.redhatworkshops.io:6443
   config: '{"tlsClientConfig":{"insecure":true},"bearerToken":"<REPLACE_WITH_WEST_CLUSTER_TOKEN>"}'
 ---
