--- a/app-nfl-wallet-acm-cluster-decision.yaml
+++ b/app-nfl-wallet-acm-cluster-decision.yaml
@@ -78,6 +78,8 @@ spec:
               value: "webapp-{{.namespace}}.apps.{{ if eq .clusterName \"east\" }}cluster-s6krm.s6krm.sandbox3480.opentlc.com{{ else }}cluster-2l9nd.dynamic.redhatworkshops.io{{ end }}"
             - name: nfl-wallet.blueGreen.hostname
               value: "nfl-wallet-canary.apps.{{ if eq .clusterName \"east\" }}cluster-s6krm.s6krm.sandbox3480.opentlc.com{{ else }}cluster-2l9nd.dynamic.redhatworkshops.io{{ end }}"
+            - name: nfl-wallet.espn.host
+              value: "nfl-wallet-test-espn.apps.{{ if eq .clusterName \"east\" }}cluster-s6krm.s6krm.sandbox3480.opentlc.com{{ else }}cluster-2l9nd.dynamic.redhatworkshops.io{{ end }}"
       destination:
         name: "{{.clusterName}}"
         namespace: "{{.namespace}}"
