--- a/nfl-wallet-prod/templates/api-key-secrets-kuadrant.yaml
+++ b/nfl-wallet-prod/templates/api-key-secrets-kuadrant.yaml
@@ -1,40 +1,54 @@
-# API key Secrets for Kuadrant AuthPolicy. Created in kuadrant-system so Authorino can read them
-# when allNamespaces is false. Only created when nfl-wallet.apiKeys.enabled is true.
-# Override nfl-wallet.apiKeys.* via Helm/Argo or Sealed Secrets for production.
-{{ if (index .Values "nfl-wallet").apiKeys.enabled }}
+# API keys para AuthPolicy (connectivity-link). Secrets en el namespace de la app con label api=<namespace>.
+# AuthPolicy usa allNamespaces: true. Usar Sealed Secrets / External Secrets en prod.
+{{- if (index .Values "nfl-wallet").apiKeys.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: nfl-wallet-apikey-customers-prod
-  namespace: {{ default "kuadrant-system" (index .Values "nfl-wallet").kuadrantNamespace }}
+  name: nfl-wallet-api-keys
+  namespace: {{ .Release.Namespace }}
   labels:
     api: {{ .Release.Namespace }}
-    authorino.kuadrant.io/managed-by: {{ default "authorino" (index .Values "nfl-wallet").authorinoManagedBy }}
-type: Opaque
+    kuadrant.io/managed-by: authorino
+    authorino.kuadrant.io/managed-by: authorino
+stringData:
+  api_key: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
+  api-key-bills: {{ (index .Values "nfl-wallet").apiKeys.bills | quote }}
+  api-key-customers: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
+  api-key-raiders: {{ (index .Values "nfl-wallet").apiKeys.raiders | quote }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: nfl-wallet-api-keys-customers
+  namespace: {{ .Release.Namespace }}
+  labels:
+    api: {{ .Release.Namespace }}
+    kuadrant.io/managed-by: authorino
+    authorino.kuadrant.io/managed-by: authorino
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: nfl-wallet-apikey-bills-prod
-  namespace: {{ default "kuadrant-system" (index .Values "nfl-wallet").kuadrantNamespace }}
+  name: nfl-wallet-api-keys-bills
+  namespace: {{ .Release.Namespace }}
   labels:
     api: {{ .Release.Namespace }}
-    authorino.kuadrant.io/managed-by: {{ default "authorino" (index .Values "nfl-wallet").authorinoManagedBy }}
-type: Opaque
+    kuadrant.io/managed-by: authorino
+    authorino.kuadrant.io/managed-by: authorino
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.bills | quote }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: nfl-wallet-apikey-raiders-prod
-  namespace: {{ default "kuadrant-system" (index .Values "nfl-wallet").kuadrantNamespace }}
+  name: nfl-wallet-api-keys-raiders
+  namespace: {{ .Release.Namespace }}
   labels:
     api: {{ .Release.Namespace }}
-    authorino.kuadrant.io/managed-by: {{ default "authorino" (index .Values "nfl-wallet").authorinoManagedBy }}
-type: Opaque
+    kuadrant.io/managed-by: authorino
+    authorino.kuadrant.io/managed-by: authorino
 stringData:
   api_key: {{ (index .Values "nfl-wallet").apiKeys.raiders | quote }}
-{{ end }}
+{{- end }}
