--- a/nfl-wallet-prod/helm-values.yaml
+++ b/nfl-wallet-prod/helm-values.yaml
@@ -31,7 +31,7 @@ nfl-wallet:
     image: nfl-wallet-webapp
     tag: latest
     route:
-      enabled: true
+      enabled: false  # Un solo route: gateway sirve frontend + APIs (connectivity-link)
       # host = webapp-<namespace>.apps.<clusterDomain>
       host: ""  # Override via ApplicationSet
       tls:
