--- a/nfl-wallet-test/helm-values.yaml
+++ b/nfl-wallet-test/helm-values.yaml
@@ -49,11 +49,14 @@ nfl-wallet:
   gatewayPolicyGatewayName: "nfl-wallet-gateway"
 
   # Spec §6: subscription / credential-based access; defaults for testing (override via Sealed Secrets in prod)
+  # apiKeys.enabled: false evita duplicado Secret con chart; kuadrantApiKeys crea secrets con labels para AuthPolicy
   apiKeys:
-    enabled: true
+    enabled: false
     customers: "nfl-wallet-customers-key"
     bills: "nfl-wallet-bills-key"
     raiders: "nfl-wallet-raiders-key"
+  kuadrantApiKeys:
+    enabled: true
   waypoint:
     enabled: true
   gateway:
