--- a/app-nfl-wallet-acm.yaml
+++ b/app-nfl-wallet-acm.yaml
@@ -320,15 +320,15 @@ spec:
             - name: nfl-wallet.espn.host
               value: "nfl-wallet-test-espn.apps.{{.clusterDomain}}"
             - name: nfl-wallet.observability.rhobs.enabled
-              value: "{{ if eq .cluster "west" }}false{{ else if eq .path "nfl-wallet-prod" }}true{{ else }}false{{ end }}"
+              value: '{{ if eq .cluster "west" }}false{{ else if eq .path "nfl-wallet-prod" }}true{{ else }}false{{ end }}'
             - name: nfl-wallet.observability.rhobs.podMonitorGateway.enabled
-              value: "{{ if eq .cluster "west" }}false{{ else }}true{{ end }}"
+              value: '{{ if eq .cluster "west" }}false{{ else }}true{{ end }}'
             - name: nfl-wallet.observability.rhobs.serviceMonitorGateway.enabled
-              value: "{{ if eq .cluster "west" }}false{{ else }}true{{ end }}"
+              value: '{{ if eq .cluster "west" }}false{{ else }}true{{ end }}'
             - name: nfl-wallet.observability.rhobs.thanosQuerier.enabled
-              value: "{{ if or (eq .cluster "west") (ne .path "nfl-wallet-prod") }}false{{ else }}true{{ end }}"
+              value: '{{ if or (eq .cluster "west") (ne .path "nfl-wallet-prod") }}false{{ else }}true{{ end }}'
             - name: nfl-wallet.observability.rhobs.uiPlugin.enabled
-              value: "{{ if or (eq .cluster "west") (ne .path "nfl-wallet-prod") }}false{{ else }}true{{ end }}"
+              value: '{{ if or (eq .cluster "west") (ne .path "nfl-wallet-prod") }}false{{ else }}true{{ end }}'
       destination:
         name: "{{.cluster}}"
         namespace: "{{.namespace}}"
