--- a/nfl-wallet-test/templates/api-key-secrets-kuadrant.yaml
+++ b/nfl-wallet-test/templates/api-key-secrets-kuadrant.yaml
@@ -1,6 +1,8 @@
 # API keys para AuthPolicy (connectivity-link). Secrets en el namespace de la app con label api=<namespace>.
 # AuthPolicy usa allNamespaces: true. Usar Sealed Secrets / External Secrets en prod.
-{{- if (index .Values "nfl-wallet").apiKeys.enabled }}
+# Usamos kuadrantApiKeys.enabled para evitar duplicado con el chart (api-keys-secret.yaml).
+{{- $nfl := index .Values "nfl-wallet" -}}
+{{- if or ((index $nfl "kuadrantApiKeys" | default dict).enabled | default false) ($nfl.apiKeys.enabled | default false) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,10 +13,10 @@ metadata:
     kuadrant.io/managed-by: authorino
     authorino.kuadrant.io/managed-by: authorino
 stringData:
-  api_key: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
-  api-key-bills: {{ (index .Values "nfl-wallet").apiKeys.bills | quote }}
-  api-key-customers: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
-  api-key-raiders: {{ (index .Values "nfl-wallet").apiKeys.raiders | quote }}
+  api_key: {{ $nfl.apiKeys.customers | quote }}
+  api-key-bills: {{ $nfl.apiKeys.bills | quote }}
+  api-key-customers: {{ $nfl.apiKeys.customers | quote }}
+  api-key-raiders: {{ $nfl.apiKeys.raiders | quote }}
 ---
 apiVersion: v1
 kind: Secret
@@ -26,7 +28,7 @@ metadata:
     kuadrant.io/managed-by: authorino
     authorino.kuadrant.io/managed-by: authorino
 stringData:
-  api_key: {{ (index .Values "nfl-wallet").apiKeys.customers | quote }}
+  api_key: {{ $nfl.apiKeys.customers | quote }}
 ---
 apiVersion: v1
 kind: Secret
@@ -38,7 +40,7 @@ metadata:
     kuadrant.io/managed-by: authorino
     authorino.kuadrant.io/managed-by: authorino
 stringData:
-  api_key: {{ (index .Values "nfl-wallet").apiKeys.bills | quote }}
+  api_key: {{ $nfl.apiKeys.bills | quote }}
 ---
 apiVersion: v1
 kind: Secret
@@ -50,5 +52,5 @@ metadata:
     kuadrant.io/managed-by: authorino
     authorino.kuadrant.io/managed-by: authorino
 stringData:
-  api_key: {{ (index .Values "nfl-wallet").apiKeys.raiders | quote }}
+  api_key: {{ $nfl.apiKeys.raiders | quote }}
 {{- end }}
